--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: sokeri.org
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Valeria's portfolio
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: http://muiskis.files.wordpress.com/2011/02/buddypic.png?w=166&h=180
 
 #
 # Flags below are optional
