--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ footer-links:
   facebook: 
   flickr: 
   instagram: 
-  linkedin: http://fi.linkedin.com/in/valeriag
+  linkedin: valeriag
   pinterest: 
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
   twitter: muiskis
