--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ avatar: http://muiskis.files.wordpress.com/2011/02/buddypic.png?w=166&h=180
 #
 
 # Includes an icon in the footer for each username you enter
-footer-links: www.soundshade.me
+footer-links: 
   dribbble: 
   email: valeria(@)sokeri.org
   facebook: 
