--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: sokeri.org
 
 # Short bio or description (displayed in the header)
-description: Valeria's portfolio pölöpölö
+description: Valeria's portfolio 
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: http://muiskis.files.wordpress.com/2011/02/buddypic.png?w=166&h=180
